force-app/main/default/objects/VS_SalesPlanDetail__c/VS_SalesPlanDetail__c.object-meta.xml
<CustomObject>
    <description>SalesPlan Detail 정보를 관리하는 Object(년, 월별 수량, 판가 정보)</description>
    <label>SalesPlanDetail</label>
    <nameField>
        <displayFormat>SPD-{000000000}</displayFormat>
        <label>SalesPlanDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesPlanDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>