force-app/main/default/objects/VS_SalesPlanDetail__c/fields/ActualAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualAmount__c</fullName>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>