force-app/main/default/objects/VS_SalesPlanDetail__c/fields/ActualPrice__c.field-meta.xml
<CustomField>
    <fullName>ActualPrice__c</fullName>
    <label>Actual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>