force-app/main/default/objects/VS_SalesPlanDetail__c/fields/ActualQty__c.field-meta.xml
<CustomField>
    <fullName>ActualQty__c</fullName>
    <label>Actual Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>