force-app/main/default/objects/VS_SalesPlanDetail__c/fields/Adjust_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Price__c</fullName>
    <label>Adjust Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>