force-app/main/default/objects/VS_SalesPlanDetail__c/fields/AdjustAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustAmount__c</fullName>
    <label>Adjust Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>