force-app/main/default/objects/VS_SalesPlanDetail__c/fields/AdjustQty__c.field-meta.xml
<CustomField>
    <fullName>AdjustQty__c</fullName>
    <label>Adjust Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>