force-app/main/default/objects/VS_SalesPlanDetail__c/fields/fm_ModelName__c.field-meta.xml
<CustomField>
    <fullName>fm_ModelName__c</fullName>
    <formula>l_SalesPlanItem__r.l_OpportunityItem__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Name</label>
    <type>Text</type>
</CustomField>