force-app/main/default/objects/VS_SalesPlanDetail__c/fields/fm_OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>fm_OpportunityName__c</fullName>
    <formula>l_SalesPlanItem__r.l_SalesPlan__r.l_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>