force-app/main/default/objects/VS_SalesPlanDetail__c/fields/fm_QuoteType__c.field-meta.xml
<CustomField>
    <fullName>fm_QuoteType__c</fullName>
    <formula>l_SalesPlanItem__r.l_SalesPlan__r.l_Quote__r.QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type(임시)</label>
    <type>Text</type>
</CustomField>