force-app/main/default/objects/VS_SalesPlanDetail__c/fields/l_SalesPlanItem__c.field-meta.xml
<CustomField>
    <fullName>l_SalesPlanItem__c</fullName>
    <label>SalesPlanItem</label>
    <referenceTo>VS_SalesPlanItem__c</referenceTo>
    <relationshipLabel>SalesPlanDetails</relationshipLabel>
    <relationshipName>SalesPlanDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>