force-app/main/default/objects/VS_SalesPlanDetail__c/fields/PlanAmount__c.field-meta.xml
<CustomField>
    <fullName>PlanAmount__c</fullName>
    <label>Plan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>