force-app/main/default/objects/VS_SalesPlanDetail__c/fields/PlanPrice__c.field-meta.xml
<CustomField>
    <fullName>PlanPrice__c</fullName>
    <label>Plan Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>