force-app/main/default/objects/VS_SalesPlanDetail__c/fields/PlanQty__c.field-meta.xml
<CustomField>
    <fullName>PlanQty__c</fullName>
    <label>Plan Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>