force-app/main/default/objects/VS_SalesPlanDetail__c/fields/SimulationAmount__c.field-meta.xml
<CustomField>
    <fullName>SimulationAmount__c</fullName>
    <label>Simulation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>