force-app/main/default/objects/VS_SalesPlanDetail__c/fields/SimulationPrice__c.field-meta.xml
<CustomField>
    <fullName>SimulationPrice__c</fullName>
    <label>Simulation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>