force-app/main/default/objects/VS_SalesPlanDetail__c/fields/SimulationQty__c.field-meta.xml
<CustomField>
    <fullName>SimulationQty__c</fullName>
    <label>Simulation Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>